--- a/src/app/pages/checklist/checklist.page.html
+++ b/src/app/pages/checklist/checklist.page.html
@@ -1,9 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>checklist</ion-title>
+    <ion-title>Hello</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
-</ion-content>
+<ion-content> </ion-content>
